<resources>
    <string name="app_name">MoNAD</string>
    <string name="title_activity_login">MoNAD - The Driver\'s Best Friend</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="label_emergency">S.O.S</string>
    <string name="img_description">missing icon</string>
    <string name="non_available">n/a</string>
    <string name="GoogleProjectID" translatable="false">81265551950</string>

    <!--Login Activity-->
    <string name="label_login_login">Log In</string>
    <string name="label_login_driverid">Driver ID</string>
    <string name="label_login_password">Password</string>
    <string name="label_login_busnumber">Bus Number</string>

    <!--Map Activity-->
    <string name="label_main_nextdestination">No Registered Destination</string>
    <string name="label_main_boardingpassengers">Boarding</string>
    <string name="label_main_leavingpassengers">Leaving</string>
    <string name="label_main_boardingnumber">00</string>
    <string name="label_main_leavingnumber">00</string>
    <string name="label_main_distance">Distance</string>
    <string name="label_main_distance_value">000 m</string>
    <string name="label_main_distance_unit">%d m</string>
    <string name="label_main_distanceunknown">unknown</string>
    <string name="label_main_arrivaltime">Arrival Time</string>
    <string name="label_main_arrivaltime_duration">(0 min)</string>
    <string name="label_main_duration_unit">(%s min)</string>
    <string name="label_main_arrivaltime_value">00:00</string>

    <!--Main - Emergency Layout-->
    <string name="label_emergency_type">Type of emergency</string>
    <string name="label_emergency_accident">Accident</string>
    <string name="label_emergency_trafficjam">Traffic jam</string>
    <string name="label_emergency_mechanicalissue">Mechanical Issue</string>
    <string name="label_emergency_driverhealth">Driver Health</string>
    <string name="label_emergency_other">Other (Please specify)</string>
    <string name="label_emergency_description">Description:</string>
    <string name="label_emergency_description_hint">Please enter the necessary information for your request…</string>
    <string name="label_emergency_submit">Submit</string>

    <string name="action_settings">Settings</string>

</resources>
