<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.uu.csproject.monadvehicle.LoginActivity">



    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:padding="@dimen/sideframe_padding"
        android:id="@+id/toolBar">

        <TextView
            android:text="@string/label_main_nextdestination"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/darkTheme"
            style="@style/mediumText"
            android:layout_marginLeft="@dimen/passenger_frame_width"
            />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBar">

        <LinearLayout
            android:id="@+id/side_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimaryDark"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:padding="@dimen/sideframe_padding"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            >

            <ImageButton
                android:layout_width="@dimen/button_size_large"
                android:layout_height="@dimen/button_size_large"
                android:adjustViewBounds="true"
                android:id="@+id/notificationButton"
                android:src="@mipmap/ic_notifications_black_48dp"
                android:background="@color/notificationsColor"
                android:layout_marginTop="@dimen/action_button_top_margin"
                android:layout_marginBottom="@dimen/action_button_vertical_margin"
                android:elevation="@dimen/button_elevation"
                />

            <ImageButton
                android:layout_width="@dimen/button_size_large"
                android:layout_height="@dimen/button_size_large"
                android:adjustViewBounds="true"
                android:id="@+id/busStopButton"
                android:src="@mipmap/ic_directions_bus_black_48dp"
                android:background="@color/busColor"
                android:theme="@style/AppTheme.busStopTheme"
                android:layout_marginBottom="@dimen/action_button_vertical_margin"
                android:elevation="@dimen/button_elevation"
                />

            <ImageButton
                android:layout_width="@dimen/button_size_large"
                android:layout_height="@dimen/button_size_large"
                android:adjustViewBounds="true"
                android:id="@+id/emergencyButton"
                android:src="@mipmap/ic_report_white_48dp"
                android:background="@color/warnColor"
                style="@style/emergencyTheme"
                android:layout_marginBottom="@dimen/action_button_vertical_margin"
                android:elevation="@dimen/button_elevation"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff"
                android:layout_marginBottom="@dimen/action_button_vertical_margin"
                />

            <TextView
                android:text="@string/label_main_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/darkTheme"
                style="@style/mediumText"
                />
            <TextView
                android:text="@string/label_main_distance_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/darkTheme"
                style="@style/mediumText"
                android:layout_marginBottom="@dimen/action_button_vertical_margin"
                />

            <TextView
                android:text="@string/label_main_arrivaltime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/darkTheme"
                style="@style/mediumText"
                />
            <TextView
                android:text="@string/label_main_arrivaltime_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/darkTheme"
                style="@style/mediumText"
                />
            <TextView
                android:text="@string/label_main_arrivaltime_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/darkTheme"
                style="@style/bigBoldText"
                />

        </LinearLayout>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mapLayout"
            android:layout_toRightOf="@+id/side_bar"
            android:layout_toEndOf="@+id/side_bar">

            <org.mapsforge.map.android.view.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/side_bar"
            android:layout_toEndOf="@+id/side_bar"
            android:background="@color/warnColor"
            android:padding="@dimen/sideframe_padding">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/display_bar_margin_top"/>

            <include layout="@layout/list_item_busstop"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="@dimen/passenger_frame_width"
        android:layout_height="@dimen/passenger_frame_height"
        android:background="?attr/colorAccent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/passenger_frame_height"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/label_main_boardingnumber"
                android:textColor="@color/boardingPassengersColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/darkTheme"
                style="@style/bigBoldText"
                android:id="@+id/boarding_number"
                android:layout_weight="2"
                />
            <TextView
                android:text="@string/label_main_boardingpassengers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/boarding_passengers"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/passenger_frame_height"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/label_main_leavingnumber"
                android:textColor="@color/leavingPassengersColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/darkTheme"
                style="@style/bigBoldText"
                android:id="@+id/leaving_number"
                android:layout_weight="2"
                />
            <TextView
                android:text="@string/label_main_leavingpassengers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/leaving_passengers"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
