<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.uu.csproject.monadvehicle.LoginActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:id="@+id/toolBar">

        <TextView
            android:text="@string/title_activity_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/darkTheme"
            android:gravity="center_horizontal"/>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_below="@id/toolBar">

        <ImageButton
            android:layout_width="@dimen/button_size_small"
            android:layout_height="@dimen/button_size_small"
            android:adjustViewBounds="true"
            android:textOff=""
            android:textOn=""
            android:id="@+id/emergencyButton"
            android:src="@mipmap/ic_report_white_48dp"
            android:background="@color/warnColor"
            style="?android:attr/borderlessButtonStyle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:elevation="@dimen/button_elevation"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/login_vertical_margin"
            android:layout_marginBottom="@dimen/login_vertical_margin"
            android:layout_marginLeft="@dimen/login_horizontal_margin"
            android:layout_marginRight="@dimen/login_horizontal_margin"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginEnd="@dimen/login_horizontal_margin"
            android:padding="@dimen/sideframe_padding"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:text="@string/label_login_login"
                style="?android:attr/listSeparatorTextViewStyle"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:text="@string/label_login_driverid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_login_driverid"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:text="@string/label_login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/passwordField"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_login_password"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:text="@string/label_login_busnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/busNumberField"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_login_busnumber"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_login_login"
                android:id="@+id/loginButton"
                android:theme="@style/darkTheme"
                android:background="?attr/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:elevation="@dimen/button_elevation"/>


        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="596dp"
        android:layout_marginStart="596dp"
        android:layout_marginTop="50dp" />

</RelativeLayout>
